syntax = "proto3";

package fleetspeak.stdinservice;

import "fleetspeak/src/common/proto/fleetspeak_monitoring/resource.proto";

message InputMessage {
  // The data to be forwarded to the service.
  bytes input = 1;

  // Command line arguments.
  repeated string args = 2;
}

message OutputMessage {
  bytes stdout = 1;
  bytes stderr = 2;

  fleetspeak.monitoring.ResourceUsage resource_usage = 3;
}
